--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	    <li><a style="color:#232C2D; background:#FFFFFF" href="index.html">Home</a></li>
 	    <li><a href="research.html">Research</a></li>
 	    <li><a href="pub.html">Publications</a></li>
-	    <li><a href="students.html">UVA-DSA Group</a></li>
+	    <li><a href="students.html">Students</a></li>
 	    <li><a href="teaching.html">Teaching</a></li>
 	    <li><a href="news.html">News</a></li>
 	</ul>
@@ -64,19 +64,22 @@
 		<h1>Recent News</h1>
 	</div>
 	<div id="rightColumn2">
-		A <b>postdoctoral research position</b> available in the Link Lab in the area of Medical Cyber-Physical Systems. 
-		Apply <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Research-Associate-in-Electrical-and-Computer-Engineering-and-Computer-Science_R0009889">here</a>. 
+		<a href="https://www.dependability.org/wg10.4/ivds2021/">The First IFIP workshop on Intelligent Vehicle Dependability and Security (IVDS)</a>. All the talks available <a href="https://www.dependability.org/wg10.4/ivds2021/program.html">here</a>.
 		<br><br>
 		
-		New papers on <a href="https://arxiv.org/pdf/1807.06172.pdf">Resilience Assessment of Autonomous Driving Agents</a> and 
-		<a href="./papers/ISMR2019.pdf"> Context Aware Monitoring in Robotic Surgery</a>. 
+		New papers on <a href="https://arxiv.org/pdf/2010.04785.pdf">Autonomous Endoscopic Camera Control</a> and 
+		<a href="https://arxiv.org/pdf/2005.03611.pdf"> Context Aware Safety Monitoring</a> in Robotic Surgery. 
+		<br><br>
+		
+		A <b>postdoctoral research position</b> available in the Link Lab in the area of Medical Cyber-Physical Systems. 
+		Apply <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Research-Associate-in-Electrical-and-Computer-Engineering-and-Computer-Science_R0009889">here</a>. 
 		<br><br>
 		
 		<!--I am serving on the program committee of <a href="http://www.dsn.org">DSN 2019</a> and the organizing committee of <a href="https://sites.google.com/view/wosocer/">WoSoCer 2018</a> and <a href="http://iccps.acm.org/2019/">ICCPS 2019</a>. Looking forward to your submissions!
 		<br><br>-->
 		
-		New projects on "Cyber-Attacks in Integrated Clinical Environments" and "Simulation-Based Training for Safety in Robot Assisted Surgery". 
-		<br><br>
+		<!--New project on "Context Aware Cognitive Assistance for Robotic Surgery Training".<br><br> -->
+		
 		<!--New project on "Implantable Medical Devices and Body Area Networks: System Resilience by Construction" funded by NSF SCH.
 		<br><br>
 		
