--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
 	    <li><a href="index.html">Home</a></li>
 	    <li><a href="research.html">Research</a></li>
 	    <li><a href="pub.html">Publications</a></li>
-	    <li><a href="students.html">UVA-DSA Group</a></li>
+	    <li><a href="students.html">Students</a></li>
 	    <li><a href="teaching.html">Teaching</a></li>
 	    <li><a style="color:#232C2D; background:#FFFFFF" href="news.html">News</a></li>
 	</ul>
@@ -28,7 +28,7 @@
 			<td>01/2021</td>
 			<td width="5"></td>
 			<td>
-			I am co-organizing the <a href="https://www.dependability.org/wg10.4/ivds2021/">First IFIP workshop on Intelligent Vehicle Dependability and Security (IVDS)</a> in conjunction with the Winter Meeting of the IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance. 
+			I am co-organizing the <a href="https://www.dependability.org/wg10.4/ivds2021/">First IFIP workshop on Intelligent Vehicle Dependability and Security (IVDS)</a> in conjunction with the Winter Meeting of the IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance. All the talks are available <a href="https://www.dependability.org/wg10.4/ivds2021/program.html">here</a>.
 			</td>	
 			</tr>
 			
