--- a/students.html
+++ b/students.html
@@ -14,7 +14,7 @@
 	    <li><a href="index.html">Home</a></li>
 	    <li><a href="research.html">Research</a></li>
 	    <li><a href="pub.html">Publications</a></li>
-	    <li><a style="color:#232C2D; background:#FFFFFF" href="activities.html">UVA-DSA Group</a></li>
+	    <li><a style="color:#232C2D; background:#FFFFFF" href="activities.html">Students</a></li>
 		<li><a href="teaching.html">Teaching</a></li>
 	    <li><a href="news.html">News</a></li>
 	</ul>
@@ -22,10 +22,6 @@
 		<table border="0" cellpadding="0" cellspacing="0">
 		<tbody>
 		<tr valign="top">
-		<font size="3.5" color=#000000><a href="./students.html">Dependable Systems and Analytics Group (UVA-DSA)</a></font><br><br>
-		</tr>
-		<tr valign="top">
-		
 		<td>
 		<table border="0" cellspacing="0" cellpadding="5">
 		<tbody>
@@ -37,7 +33,6 @@
 			<td><ul>
 			<li>Kay Hutchinson</li>
 			<li>Zongyu (Zoey) Li</li>
-			<li>Taylor Patrick</li>
 			<li>Xugui Zhou</li>	
 			</ul>
 			<br>
@@ -62,14 +57,17 @@
 		<tr valign="top">
 		    <td></td>
 			<td><ul> 
+			<li>Rohan Chandra</li>
+			<li>Devin Gardner</li>
 			<li>Sion Kim</li>
 			<li>Asha Maran</li>
+			<li>Ian Reyes</li>
 			</ul>
 			</td>
 		</tr>
 		
 		<tr valign="top">
-			<td colspan=2><b><font size="3" color=#000000><br>Former Students</font></b></td>
+			<td colspan=2><b><font size="3" color=#000000><br>Alumni</font></b></td>
 		</tr>
 		<tr valign="top">
 			<td colspan=2><b>Graduate Students:</b></td>
@@ -78,11 +76,11 @@
 			<td></td>
 			<td>
 			<ul>
-			<li>Mustafa Hotaki -&ensp;First Position: Counterpoint Consulting&ensp;</li>
-			<li>Mohammad Samin Yasar</li>
-			<li>Bulbul Ahmed -&ensp;First Position: PhD @ UFlorida&ensp;</li>
-			<li>Yongming Qin</li>
-			<li>Sile Shu -&ensp;First Position: Software Engineer @ Amazon&ensp;</li>
+			<li>Mustafa Hotaki, M.Sc., 2020 =>&ensp;Counterpoint Consulting&ensp;</li>
+			<li>Mohammad Samin Yasar&ensp;</li>
+			<li>Bulbul Ahmed, M.Sc., 2019&ensp;=>&ensp;PhD @ UFlorida&ensp;</li>
+			<li>Yongming Qin&ensp;</li>
+			<li>Sile Shu, M.Sc., 2019&ensp;=>&ensp;Software Engineer @ Amazon&ensp;</li>
 			</ul>
 			<br>
 			</td>
@@ -101,7 +99,7 @@
 			<li>Erick Tian</li>
 			<li>Michael Tang</li>
 			<li>Gabriel Mallari</li> 
-			<li>Ailec Wu -&ensp;First Position: PhD @ Caltech&ensp;</li>
+			<li>Ailec Wu =>&ensp;PhD @ Caltech&ensp;</li>
 			<li>Annie Chapman&ensp;</li>
 			<li>Terry Tsai&ensp;</li>
 			<li>JoonHyung Park&ensp;</li>
@@ -122,21 +120,27 @@
 		<tr valign="top">
 			<td width="35%" align="center">
 			<img src="./images/UVA-DSA_2019.jpg" alt="[JPG]" width="90%" height="auto%" align="middle" border="0"/><br/> 
-			<span style="font-size: small;">UVA-DSA Group Lunch - Jan. 2019</span>
+			<!-- <span style="font-size: small;">UVA-DSA Group Lunch - Jan. 2019</span>-->
 			</td>
 			<td width="35%" align="center">
-			<img src="./images/TechGirls_2018.jpg" alt="[JPG]" width="100%" height="auto%" align="middle" border="0"/><br/> 
-			<span style="font-size: small;">TechGirls' Geek Day @ UVA Link Lab, 2018</span>
+			<img src="./images/TechGirls_2018_2.png" alt="[JPG]" width="100%" height="auto%" align="middle" border="0"/><br/> 
+			<!-- <span style="font-size: small;">TechGirls' Geek Day @ UVA Link Lab, 2018</span>-->
 			</td>
 		</tr>
 		<tr valign="top">
-  			<td width="35%" align="center">
-			<img src="./images/UVA-DSA_2018.jpeg" alt="[JPG]" width="90%" height="auto%" border="0" align="middle"><br>
-			<font size="2">UVA-DSA Group Lunch - Jan. 2018</font>
+			<td width="35%" align="right">
 			</td>
 			<td width="35%" align="center">
-			<img src="./images/EOH_2018.jpg" alt="[JPG]" width="90%" height="auto%" border="0" align="middle"><br>
-			<font size="2">UVA Engineering Open House, 2018</font>
+			<img src="./images/TechGirls_2018_1.jpg" alt="[JPG]" width="100%" height="auto%" align="middle" border="0"/><br/> 
+			<!-- <span style="font-size: small;">TechGirls' Geek Day @ UVA Link Lab, 2018</span>-->
+			</td>
+		</tr>
+		<tr valign="top">
+			<td width="35%" align="center">
+			</td>
+			<td width="35%" align="right">
+			<img src="./images/EOH_2018.jpg" alt="[JPG]" width="100%" height="auto%" border="0" align="middle"><br>
+			<!-- <font size="2">UVA Engineering Open House, 2018</font>-->
 			</td>
 		</tr>
 		</tbody>
