--- a/teaching.html
+++ b/teaching.html
@@ -13,7 +13,7 @@
 	    <li><a href="index.html">Home</a></li>
 	    <li><a href="research.html">Research</a></li>
 	    <li><a href="pub.html">Publications</a></li>
-	    <li><a href="students.html">UVA-DSA Group</a></li>
+	    <li><a href="students.html">Students</a></li>
 	    <li><a style="color:#232C2D; background:#FFFFFF" href="teaching.html">Teaching</a></li>
 	    <li><a href="news.html">News</a></li>
 	</ul>
@@ -30,7 +30,7 @@
 			<td>
 			<p align="left" style="font-size:13px">
 			<u><a href="./teaching/ece_6434">Dependable Computing Systems (ECE/CS 4434/6434)</a></u><br>
-			Instructor, ECE Department, Spring 2017, 2018, 2019<br><br>
+			Instructor, ECE/CS Departments, Spring 2017, 2018, 2019, 2021<br><br>
             <u><a href="./teaching/ece_6501">Advanced Embedded Computing Systems (ECE 4501/6501, CS 6501)</a></u><br>
 			Instructor, ECE Department, Fall 2017, 2018, 2020<br><br>
 			</p>
