--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 <div id="all" class="clearfix">
+	<ul id="nav">
+	    <li><a style="color:#232C2D; background:#FFFFFF" href="index.html">Home</a></li>
+	    <li><a href="schedule.html">Schedule</a></li>
+	</ul>
+	<div id="content">
 	<p align="center" style="font-size:20px">
 	   <strong><b><br>Dependable Computing Systems</b></strong>
 	</p>
