--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -14,10 +14,10 @@
 	    <li><a href="schedule.html">Schedule</a></li>
 	</ul>
 	<div id="content">
-	<p align="center" style="font-size:20px">
-	   <strong><b><br>Dependable Computing Systems</b></strong>
+	<p align="center" style="font-size:22px">
+	   <strong><b>Dependable Computing Systems</b></strong>
 	</p>
-	<p align="center" style="font-size:18px">
+	<p align="center" style="font-size:22px">
 	   <b>
 	   ECE/CS 4434/6434<br>
 	   Spring 2021 <br>
