--- a/pub.html
+++ b/pub.html
@@ -22,6 +22,23 @@
 	    <font size="2.5">
 		<table border="0" cellpadding="5" cellspacing="0">
 		<tbody>
+		
+		    <tr valign="top">
+			<td>
+			<!--<a href="https://arxiv.org/pdf/2005.03611.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			   <a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+			   -->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“Data-driven Design of Context-aware Monitors for Hazard Prediction in Artificial Pancreas Systems” </font></b></b><br>
+			X. Zhou, B. Ahmed, J. H. Aylor, P. Asare, <u>H. Alemzadeh</u><br>
+			To appear in the <i>51st IEEE/IFIP Int. Conf. on Dependable Systems and Networks (DSN)</i>, 2021.<br>   	
+			</p>
+			</td>
+		    </tr>
+		    
+		    
 		    <tr valign="top">
 			<td>
 			<a href="./papers/CognitiveAssistants2021.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
