Adding DSN paper, 4434/6434 presentations, news, etc.

--- a/news.html
+++ b/news.html
@@ -29,6 +29,8 @@
 			<td width="5"></td>
 			<td>
 			Our paper on <a href="TBD">Data-driven Design of Context-aware Monitors for Hazard Prediction in Artificial Pancreas Systems</a> was accepted to the<a href="http://dsn2021.ntu.edu.tw" target="_blank"> 51st IEEE/IFIP Int. Conf. on Dependable Systems and Networks (DSN 2021)</a> (Acceptance rate: 16.3%). 
+			<br><br>
+			Our CognitiveEMS project on AI Cognitive Assistants for Emergency Medical Services was featured by: <a href = "https://news.virginia.edu/content/research-and-rescue-engineers-and-first-responders-join-forces" target="_blank">UVA Today</a>, <a href = "https://www.nbc29.com/2021/03/18/uva-engineers-developing-ai-technology-help-first-responders/" target="_blank">NBC29</a>, <a href = "https://www.wsls.com/news/local/2021/03/21/uva-engineers-developing-ai-technology-to-help-first-responders-during-emergencies/" target="_blank">WSLS</a>, and  <a href = "https://www.ems1.com/technology/articles/va-first-responders-test-ai-assistant-for-emergency-scenes-EiXK2kxFCYxMEfjc/" target="_blank">EMS1</a>.
 			</td>	
 			</tr>
 			
@@ -38,6 +40,7 @@
 			<td width="5"></td>
 			<td>
 			I am co-organizing the <a href="https://www.dependability.org/wg10.4/ivds2021/">First IFIP workshop on Intelligent Vehicle Dependability and Security (IVDS)</a> in conjunction with the Winter Meeting of the IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance. All the talks are available <a href="https://www.dependability.org/wg10.4/ivds2021/program.html">here</a>.
+			[<a href="https://www.ifipnews.org/ifip-wg10-4-stages-first-workshop-intelligent-vehicle-dependability-security/">IFIP News</a>]
 			</td>	
 			</tr>
 			
