--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -12,6 +12,7 @@
 	<ul id="nav">
 	    <li><a style="color:#232C2D; background:#FFFFFF" href="index.html">Home</a></li>
 	    <li><a href="schedule.html">Schedule</a></li>
+	    <li><a href="presentations.html">Presentations</a></li>
 	</ul>
 	<div id="content">
 	<p align="center" style="font-size:22px">
