--- a/teaching/ece_6434/schedule.html
+++ b/teaching/ece_6434/schedule.html
@@ -13,6 +13,7 @@
 	<ul id="nav">
 	    <li><a href="index.html">Home</a></li>
 	    <li><a style="color:#232C2D; background:#FFFFFF" href="schedule.html">Schedule</a></li>
+	    <li><a href="presentations.html">Presentations</a></li>
 	</ul>
 	<div id="content">
 	<table width = "100%">
