--- a/teaching/ece_6434/presentations.html
+++ b/teaching/ece_6434/presentations.html
@@ -44,6 +44,10 @@
 		<td align="center"><iframe width="100%" height="auto%" src="https://drive.google.com/file/d/1zxOW20NZLQEsB0MfZJlRh7iLGt4cCJZi/preview" frameborder="0" allowfullscreen></iframe><br>Three Mile Island Water Reactor Incident<br>Grady Roberts</td>
 		<td align="center"><iframe width="100%" height="auto%" src="https://drive.google.com/file/d/1IsYZj4zWQ0qFkj8kwKWYEMIvnWy_IeSO/preview" frameborder="0" allowfullscreen></iframe><br>Blue Screen of Death<br>Calvin Krist</td>
 		</tr>
+		<tr>
+		<td align="center"><iframe width="100%" height="auto%" src="https://www.youtube.com/embed/lGv0ZmXO9FY" frameborder="0" allowfullscreen></iframe><br>The Dhahran Patriot Missile Disaster<br>Ryan Kann</td>
+		<td align="center"><iframe width="100%" height="auto%" src="https://drive.google.com/file/d/1t44STooWrX5swP410tuqr4X30YSm1jgc/preview" frameborder="0" allowfullscreen></iframe><br>Reliability of Zoom<br>Austin Engle</td>
+		</tr>
 		</tbody>
 	</table>
     </tr>
