Adding short presentations

--- a/teaching/ece_6434/presentations.html
+++ b/teaching/ece_6434/presentations.html
@@ -32,21 +32,27 @@
 		<tr>
 		<td align="center"><iframe width="100%" height="auto%" src="https://www.youtube.com/embed/Zu97_eVT2_g" frameborder="0" allowfullscreen></iframe><br> Dependability of Discord Application <br> Aidan Hesselroth</td>
 		<td align="center"><iframe width="100%" height="auto%" src="https://drive.google.com/file/d/1jAsaSVA3kkbuzPPK0vJT8F1DvNDRvOn6/preview" frameborder="0" allowfullscreen></iframe><br>2017 Amazon AWS Outage<br>Quintin DeGroot</td>
-		<td align="center"><iframe width="100%" height="auto%" src="https://drive.google.com/file/d/1w0MUPNCNAWyx2t2Hfl1Oi2WBkoqghCY_/preview" frameborder="0" allowfullscreen></iframe><br>Medtronic Insulin Pump Recalls<br>Qi Liu</td>
+		<td align="center"><iframe width="100%" height="auto%" src="https://www.youtube.com/embed/fFewYuqT8_0" frameborder="0" allowfullscreen></iframe><br>Ariane 5 Rocket Failure<br>Catlinh Nguyen</td>
 		</tr>
 		<tr>
+		<td align="center"><iframe width="100%" height="auto%" src="https://drive.google.com/file/d/1nmNWqZZlibS9xMh_UIJz5XrLKjThCdNA/preview" frameborder="0" allowfullscreen></iframe><br>Prototype Cell Incubator Failure<br>Chase Carson</td>
+		<td align="center"><iframe width="100%" height="auto%" src="https://drive.google.com/file/d/1w0MUPNCNAWyx2t2Hfl1Oi2WBkoqghCY_/preview" frameborder="0" allowfullscreen></iframe><br>Medtronic Insulin Pump Recalls<br>Qi Liu</td>
 		<td align="center"><iframe width="100%" height="auto%" src="https://www.youtube.com/embed/IvSn8qd6TbY" frameborder="0" allowfullscreen></iframe><br>2018 GitHub Misconfiguration Incident<br>Jiajia Liang</td>
+		</tr>
+		<tr>
 		<td align="center"><iframe width="100%" height="auto%" src="https://drive.google.com/file/d/1g9U-pk2jon1-DjbnO5Mmh-fJpR0W38vH/preview" frameborder="0" allowfullscreen></iframe><br>Heartbleed Vulnerability<br>Jay Rothenberger</td>
 		<td align="center"><iframe width="100%" height="auto%" src="https://www.youtube.com/embed/WCwEJovNag0" frameborder="0" allowfullscreen></iframe><br>2020 Amazon AWS Outage<br>Jack Heavey</td>
+		<td align="center"><iframe width="100%" height="auto%" src="https://player.vimeo.com/video/531155472" frameborder="0" allowfullscreen></iframe><br>Boeing 737 Max MCAS<br>Noah Beamon</td>
 		</tr>
 		<tr>
-		<td align="center"><iframe width="100%" height="auto%" src="https://player.vimeo.com/video/531155472" frameborder="0" allowfullscreen></iframe><br>Boeing 737 Max MCAS<br>Noah Beamon</td>
 		<td align="center"><iframe width="100%" height="auto%" src="https://drive.google.com/file/d/1zxOW20NZLQEsB0MfZJlRh7iLGt4cCJZi/preview" frameborder="0" allowfullscreen></iframe><br>Three Mile Island Water Reactor Incident<br>Grady Roberts</td>
 		<td align="center"><iframe width="100%" height="auto%" src="https://drive.google.com/file/d/1IsYZj4zWQ0qFkj8kwKWYEMIvnWy_IeSO/preview" frameborder="0" allowfullscreen></iframe><br>Blue Screen of Death<br>Calvin Krist</td>
+		<td align="center"><iframe width="100%" height="auto%" src="https://www.youtube.com/embed/lGv0ZmXO9FY" frameborder="0" allowfullscreen></iframe><br>The Dhahran Patriot Missile Disaster<br>Ryan Kann</td>
 		</tr>
 		<tr>
-		<td align="center"><iframe width="100%" height="auto%" src="https://www.youtube.com/embed/lGv0ZmXO9FY" frameborder="0" allowfullscreen></iframe><br>The Dhahran Patriot Missile Disaster<br>Ryan Kann</td>
 		<td align="center"><iframe width="100%" height="auto%" src="https://drive.google.com/file/d/1t44STooWrX5swP410tuqr4X30YSm1jgc/preview" frameborder="0" allowfullscreen></iframe><br>Reliability of Zoom<br>Austin Engle</td>
+		<td align="center"><iframe width="100%" height="auto%" src="https://drive.google.com/file/d/1PPbwWMlh7BXxRZcb6mOFMJHhMmkD0n8m/preview" frameborder="0" allowfullscreen></iframe><br>The EternalBlue Exploit<br>Samuel Liu</td>
+		<td align="center"><iframe width="100%" height="auto%" src="https://www.youtube.com/embed/yGpGIdCE3HA" frameborder="0" allowfullscreen></iframe><br>Dependability of NG 911 Architecture<br>Boheng Mu</td>
 		</tr>
 		</tbody>
 	</table>
