--- a/news.html
+++ b/news.html
@@ -22,13 +22,22 @@
 		<font size="2.5">
 		<table border="0" cellpadding="5" cellspacing="0" class="smallfix">
 		<tbody>									
+			<tr valign="top"><td colspan="2"></td></tr>
+			<tr valign="top">
+			<td>04/2021</td>
+			<td width="5"></td>
+			<td>
+			We were awarded a grant from <a href="https://www.nist.gov/ctl/pscr/research-portfolios">NIST PSIAP-AR</a> on "Context Aware Augmented Reality for Cognitive Assistance in Emergency Medical Services".
+			<br>Co-PIs: Jack Stankovic (CS), Ronald Williams (ECE).
+			</td>	
+			</tr>
 			
 			<tr valign="top"><td colspan="2"></td></tr>
 			<tr valign="top">
 			<td>03/2021</td>
 			<td width="5"></td>
 			<td>
-			Our paper on <a href="TBD">Data-driven Design of Context-aware Monitors for Hazard Prediction in Artificial Pancreas Systems</a> was accepted to the<a href="http://dsn2021.ntu.edu.tw" target="_blank"> 51st IEEE/IFIP Int. Conf. on Dependable Systems and Networks (DSN 2021)</a> (Acceptance rate: 16.3%). 
+			Our paper on <a href="https://arxiv.org/abs/2104.02545">Data-driven Design of Context-aware Monitors for Hazard Prediction in Artificial Pancreas Systems</a> was accepted to the<a href="http://dsn2021.ntu.edu.tw" target="_blank"> 51st IEEE/IFIP Int. Conf. on Dependable Systems and Networks (DSN 2021)</a> (Acceptance rate: 16.3%). 
 			<br><br>
 			Our CognitiveEMS project on AI Cognitive Assistants for Emergency Medical Services was featured by: <a href = "https://news.virginia.edu/content/research-and-rescue-engineers-and-first-responders-join-forces" target="_blank">UVA Today</a>, <a href = "https://www.nbc29.com/2021/03/18/uva-engineers-developing-ai-technology-help-first-responders/" target="_blank">NBC29</a>, <a href = "https://www.wsls.com/news/local/2021/03/21/uva-engineers-developing-ai-technology-to-help-first-responders-during-emergencies/" target="_blank">WSLS</a>, and  <a href = "https://www.ems1.com/technology/articles/va-first-responders-test-ai-assistant-for-emergency-scenes-EiXK2kxFCYxMEfjc/" target="_blank">EMS1</a>.
 			</td>	
