--- a/students.html
+++ b/students.html
@@ -39,17 +39,17 @@
 			</td>
 		</tr>
 	
-		<!--<tr>
+		<tr>
 			<td colspan=2><b><font size="3" color=#000000>M.Sc. Students</font></td>
 		</tr>    
 		<tr valign="top">
 			<td></td>
 			<td><ul>
-			<li>None</li>
+			<li>Weishi Guo</li>
 			</ul>
 			<br>
 			</td>
-		</tr>-->
+		</tr>
 			
 		<tr valign="top">
 			<td colspan=2><b><font size="3" color=#000000>Undergraduate Researchers</font></td>
@@ -57,11 +57,8 @@
 		<tr valign="top">
 		    <td></td>
 			<td><ul> 
-			<li>Rohan Chandra</li>
-			<li>Devin Gardner</li>
-			<li>Sion Kim</li>
-			<li>Asha Maran</li>
-			<li>Ian Reyes</li>
+			<li>Haotian Ren</li>
+			<li>Brandon Brnich</li>
 			</ul>
 			</td>
 		</tr>
@@ -94,6 +91,11 @@
 			<td></td>
 			<td>
 			<ul>
+			<li>Rohan Chandra</li>
+			<li>Devin Gardner</li>
+			<li>Sion Kim</li>
+			<li>Asha Maran</li>
+			<li>Ian Reyes</li>
 			<li>Elizabeth Shelton</li>
 			<li>Harshneet Bhatia</li> 
 			<li>Erick Tian</li>
@@ -118,7 +120,7 @@
 		<table border="0" cellspacing="0" cellpadding="5">
 		<tbody>
 		<tr valign="top">
-			<td width="35%" align="center">
+			<td width="35%" align="right">
 			<img src="./images/UVA-DSA_2019.jpg" alt="[JPG]" width="90%" height="auto%" align="middle" border="0"/><br/> 
 			<!-- <span style="font-size: small;">UVA-DSA Group Lunch - Jan. 2019</span>-->
 			</td>
@@ -129,6 +131,8 @@
 		</tr>
 		<tr valign="top">
 			<td width="35%" align="right">
+			<img src="./images/EOH_2018.jpg" alt="[JPG]" width="90%" height="auto%" border="0" align="middle"><br>
+			<!-- <font size="2">UVA Engineering Open House, 2018</font>-->
 			</td>
 			<td width="35%" align="center">
 			<img src="./images/TechGirls_2018_1.jpg" alt="[JPG]" width="100%" height="auto%" align="middle" border="0"/><br/> 
@@ -136,11 +140,9 @@
 			</td>
 		</tr>
 		<tr valign="top">
-			<td width="35%" align="center">
-			</td>
-			<td width="35%" align="right">
-			<img src="./images/EOH_2018.jpg" alt="[JPG]" width="100%" height="auto%" border="0" align="middle"><br>
-			<!-- <font size="2">UVA Engineering Open House, 2018</font>-->
+			<td colspan="2" width="25%" align="right">
+			<img src="./images/UVA-DSA_4_2021.png" alt="[JPG]" width="80%" height="auto%" align="middle" border="0"/><br/> 
+			<!-- <span style="font-size: small;">TechGirls' Geek Day @ UVA Link Lab, 2018</span>-->
 			</td>
 		</tr>
 		</tbody>
