--- a/students.html
+++ b/students.html
@@ -40,7 +40,7 @@
 		</tr>
 	
 		<tr>
-			<td colspan=2><b><font size="3" color=#000000>M.Sc. Students</font></td>
+			<td colspan=2><b><font size="3" color=#000000>M.S. Students</font></td>
 		</tr>    
 		<tr valign="top">
 			<td></td>
@@ -57,8 +57,8 @@
 		<tr valign="top">
 		    <td></td>
 			<td><ul> 
-			<li>Haotian Ren</li>
 			<li>Brandon Brnich</li>
+			<li>Haotian Ren</li>
 			</ul>
 			</td>
 		</tr>
