--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ECE 4501/6501, CS 6501 - Fall 2020</title>
+<title>ECE 4501/6501, CS 6501 - Fall 2021</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <link rel="icon" type="image/ico" href="images/favico.ico">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
@@ -21,13 +21,15 @@
 	<tr>
 	<td>
 	<p align="left" style="font-size:22px">
-	   <b><br> ECE 4501/6501, CS 6501 - Fall 2020 <br>
+	   <b><br> ECE 4501/6501, CS 6501 - Fall 2021 <br>
 	   Real-time Embedded Systems<br></b>
 	</p>
 	<p align="left" style="font-size:15px;color:red">
-		Due to the current COVID-19 pandemic, all the course activities will be carried out online. 
+		All the course activities will be carried out in a hybrid mode. <br>
+		Class meetings and office hours will be held in person and synchronously via Zoom. 
  		<br>
-		For the latest updates, please visit <a style="font-size:15px;color:red" href="https://www.virginia.edu/coronavirus">UVA's Return to Grounds page</a>.
+ 		<!--Due to the current COVID-19 pandemic, all the course activities will be carried out online. <br>
+		For the latest updates, please visit <a style="font-size:15px;color:red" href="https://www.virginia.edu/coronavirus">UVA's Return to Grounds page</a>.-->
 	</p>
 	<p align="center" style="font-size:12px">
 		<img src="./embedded.png" alt="[PNG]" width="50%" height="auto%" border="0" align="middle"><br>
@@ -95,36 +97,39 @@
 	</div>
 	<div id="rightColumn2">
 	    <!-- <strong><a href="./ece6501_syllabus.pdf" target="_blank">Full Syllabus</a><br>-->
-		<a href="https://collab.its.virginia.edu/portal/site/cefc51f1-c513-40c8-af6f-061948426791" target="_blank">UVA Collab Site</a><br>
-		<a href="https://piazza.com/virginia/fall2020/ece45016501/home" target="_blank">Piazza</a><br>
+		<a href="https://collab.its.virginia.edu/portal/site/d52dc83a-b6d2-434e-b45c-fa6d777ca4a5" target="_blank">UVA Collab Site</a><br>
+		<a href="https://piazza.com/virginia/fall2021/ece45016501cs6501/home" target="_blank">Piazza</a><br>
 		<a href="https://github.com/UVA-embedded-systems" target="_blank">GitHub Classroom</a><br><br>
-		<a href="http://www.virginia.edu/registrar/calendar.html" target="_blank">UVA Academic Calendar</a></strong><br>
+		<a href="https://registrar.virginia.edu/calendar/academic/2021-2022" target="_blank">UVA Academic Calendar</a></strong><br>
 	</div>
 	<div id="rightbottomColumn">
 	<strong>Time: </strong>Tue/Thr 11:00 - 12:15 PM<br>
-	<strong>Location: </strong>Online via Zoom<br><br>
-	<!--<strong>Lab Location: </strong>Rice 240 (Open 24/7)<br><br>-->
+	<strong>Location: </strong>Thornton Hall E304 
+	<br>+ Zoom Session via UVA Collab<br><br>
+	<strong>Lab Location: </strong>Rice 240 (Open 24/7)<br><br>
     <strong>Instructor: </strong><br>
-    Homa Alemzadeh, ha4d@virginia.edu<br><br>
-    <!--Office: 259 Olsson Hall (Link Lab)<br>-->
-    <b>Virtual Instructor Office Hours:</b><br>
-	Tuesdays&ensp;2-3pm via Zoom&ensp;<br><br>
+    Homa Alemzadeh, ha4d@virginia.edu<br>
+    Office: 259 Olsson Hall (Link Lab)<br>
+    <br>
+    <b>Instructor Office Hours:</b> TBD<br>
+    <!--Tuesdays&ensp;2-3pm via Zoom&ensp;<br>-->
+    <br>
+    
 	
 	<strong>Teaching Assistants:</strong> <br> 
-	Adam El Sheikh<br>
-    Gunther Abbot<br>
-	Nicholas Moon<br>  
-    Quin Helfrick<br>
-    Tahmid Kazi<br>
+	Kay Hutchinson<br>
+	Seyed Ahmad Mansouri<br>
+	Linyang Du<br>
+	Akash Nair<br>
 	<br>
-    <strong>Virtual TA Office Hours: </strong> via Zoom<br>
+    <strong>TA Office Hours: </strong> TBD<br>
     <table border="0" cellpadding="0" cellspacing="0">
 	<tbody>
-	<tr><td>Mondays&ensp;</td><td>1-2pm&ensp;</td><tr><!--<td>Quin Helfrick&nbsp;</td></tr>-->
-	<tr><td>Tuesdays&ensp;</td><td>4-6pm&ensp;</td><tr><!--<td>Nicholas Moon</td></tr>-->
-	<tr><td>Wednesdays&ensp;</td><td>4-6pm&ensp;</td><tr><!--<td>Gunther Abbot</td></tr>-->
-	<tr><td>Thursdays&ensp;</td><td>4-6pm&ensp;</td><tr><!--<td>Adam El Sheikh</td></tr>-->
-	<tr><td>Fridays&ensp;</td><td>4-5pm&ensp;</td><tr><!--<td>Tahmid Kazi</td></tr>-->
+	<!--<tr><td>Mondays&ensp;</td><td>1-2pm&ensp;</td><tr>
+	<tr><td>Tuesdays&ensp;</td><td>4-6pm&ensp;</td><tr>
+	<tr><td>Wednesdays&ensp;</td><td>4-6pm&ensp;</td><tr>
+	<tr><td>Thursdays&ensp;</td><td>4-6pm&ensp;</td><tr>
+	<tr><td>Fridays&ensp;</td><td>4-5pm&ensp;</td><tr>-->
 	</tbody>
 	</table>
 	<br>
