Update office hours

--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -105,14 +105,16 @@
 	<div id="rightbottomColumn">
 	<strong>Time: </strong>Tue/Thr 11:00 - 12:15 PM<br>
 	<strong>Location: </strong>Thornton Hall E304 
-	<br>+ Zoom Session via UVA Collab<br><br>
+	<br>+ Online Zoom Session via UVA Collab<br><br>
 	<strong>Lab Location: </strong>Rice 240 (Open 24/7)<br><br>
     <strong>Instructor: </strong><br>
     Homa Alemzadeh, ha4d@virginia.edu<br>
     Office: 259 Olsson Hall (Link Lab)<br>
     <br>
-    <b>Instructor Office Hours:</b> TBD<br>
-    <!--Tuesdays&ensp;2-3pm via Zoom&ensp;<br>-->
+    <b>Instructor Office Hours:</b> <br>
+    Tuesdays&ensp;1-2pm<br> 
+    In person and/or via Zoom<br>
+    Other times by appointment<br>
     <br>
     
 	
