Adding office hours

--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -113,7 +113,7 @@
     <br>
     <b>Instructor Office Hours:</b> <br>
     Tuesdays&ensp;1-2pm<br> 
-    In person and/or via Zoom<br>
+    In person in Olsson 259 and via Zoom<br>
     Other times by appointment<br>
     <br>
     
@@ -124,14 +124,16 @@
 	Linyang Du<br>
 	Akash Nair<br>
 	<br>
-    <strong>TA Office Hours: </strong> TBD<br>
+    <strong>TA Office Hours: </strong> <br>
+    In person in Rice 240 and via Zoom<br>
     <table border="0" cellpadding="0" cellspacing="0">
 	<tbody>
-	<!--<tr><td>Mondays&ensp;</td><td>1-2pm&ensp;</td><tr>
-	<tr><td>Tuesdays&ensp;</td><td>4-6pm&ensp;</td><tr>
-	<tr><td>Wednesdays&ensp;</td><td>4-6pm&ensp;</td><tr>
-	<tr><td>Thursdays&ensp;</td><td>4-6pm&ensp;</td><tr>
-	<tr><td>Fridays&ensp;</td><td>4-5pm&ensp;</td><tr>-->
+	<tr><td>Mondays&ensp;</td><td>10-11am&ensp;</td><tr>
+	<tr><td>Tuesdays&ensp;</td><td>TBD&ensp;</td><tr>
+	<tr><td>Wednesdays&ensp;</td><td>3-4pm&ensp;</td><tr>
+	<tr><td>Thursdays&ensp;</td><td>12:30-1:30pm&ensp;</td><tr>
+	<tr><td>Fridays&ensp;</td><td>11am-12pm&ensp;</td><tr>
+	
 	</tbody>
 	</table>
 	<br>
