--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -129,9 +129,9 @@
     <table border="0" cellpadding="0" cellspacing="0">
 	<tbody>
 	<tr><td>Mondays&ensp;</td><td>10-11am&ensp;</td><tr>
-	<tr><td>Tuesdays&ensp;</td><td>TBD&ensp;</td><tr>
+	<tr><td>Tuesdays&ensp;</td><td>5:30-6:30pm&ensp;(Zoom)</td><tr>
 	<tr><td>Wednesdays&ensp;</td><td>3-4pm&ensp;</td><tr>
-	<tr><td>Thursdays&ensp;</td><td>12:30-1:30pm&ensp;</td><tr>
+	<tr><td>Thursdays&ensp;</td><td>4-5pm&ensp;</td><tr>
 	<tr><td>Fridays&ensp;</td><td>11am-12pm&ensp;</td><tr>
 	
 	</tbody>
