Update students and papers

--- a/students.html
+++ b/students.html
@@ -45,7 +45,7 @@
 		<tr valign="top">
 			<td></td>
 			<td><ul>
-			<li>Weishi Guo</li>
+			<li>Shashank Vasuki</li>
 			</ul>
 			<br>
 			</td>
@@ -58,7 +58,7 @@
 		    <td></td>
 			<td><ul> 
 			<li>Brandon Brnich</li>
-			<li>Sion Kim</li>
+			<li>Rohan Chandra</li>
 			<li>Haotian Ren</li>
 			<li>Ian Reyes</li>
 			</ul>
@@ -93,7 +93,7 @@
 			<td></td>
 			<td>
 			<ul>
-			<li>Rohan Chandra</li>
+			<li>Sion Kim</li>
 			<li>Devin Gardner</li>
 			<li>Asha Maran</li>
 			<li>Elizabeth Shelton</li>
