--- a/students.html
+++ b/students.html
@@ -40,16 +40,15 @@
 		</tr>
 	
 		<tr>
-			<td colspan=2><b><font size="3" color=#000000>M.S. Students</font></td>
+		<!--	<td colspan=2><b><font size="3" color=#000000>M.S. Students</font></td>
 		</tr>    
 		<tr valign="top">
 			<td></td>
 			<td><ul>
-			<li>Shashank Vasuki</li>
 			</ul>
 			<br>
 			</td>
-		</tr>
+		</tr> -->
 			
 		<tr valign="top">
 			<td colspan=2><b><font size="3" color=#000000>Undergraduate Researchers</font></td>
