--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -55,10 +55,10 @@
 		</ul>
 		<br>
 	</p>
-	<p><strong>Time: </strong>Tue/Thu 11:00am - 12:15pm<br> 
-	<strong>Location: </strong>Online via Zoom<br><br>
-	<strong>Virtual Instructor Office Hours: </strong>Tuesdays 2pm or by appointment - via Zoom<br>
-	<strong>Virtual TA Office Hours: </strong>Wednesdays 3pm - via Zoom<br>	
+	<p><strong>Time: </strong>Mon/Wed 2:00 - 3:15pm<br> 
+	<strong>Location: </strong>Rice 340<br><br>
+	<strong>Instructor Office Hours: </strong>TBD or by appointment - via Zoom<br>
+	<strong>TA Office Hours: </strong>TBD<br>	
 	<strong><a href="https://collab.its.virginia.edu/portal/site/1b7818db-9f3c-4d78-ba05-d2847f0a107f" target="_blank">UVA Collab Site</a></strong> (For lecture notes, homework submission, grading)<br>
 	<strong><a href="https://piazza.com/virginia/spring2021/ececs44346434" target="_blank">Piazza</a></strong> (For questions, discussions, and polls)</p>	
 
