--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ECE/CS 4434/6434 - Spring 2021</title>
+<title>ECE/CS 4434/6434 - Spring 2022</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <link rel="icon" type="image/ico" href="images/favico.ico">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
@@ -21,17 +21,17 @@
 	<p align="center" style="font-size:22px">
 	   <b>
 	   ECE/CS 4434/6434<br>
-	   Spring 2021 <br>
+	   Spring 2022 <br>
 	   </b>
 	</p>
 	<p align="center" style="font-size:20px" >
 	<img src="./incidents.png" alt="[PNG]" width="80%" height="80%" border="0" align="middle">
 	</p>	
-	<p align="left" style="font-size:15px;color:red">
+	<!--<p align="left" style="font-size:15px;color:red">
 		Due to the current COVID-19 pandemic, all the course activities will be carried out online. 
  		<br>
 		For the latest updates, please visit <a style="font-size:15px;color:red" href="https://www.virginia.edu/coronavirus">UVA's Return to Grounds page</a>.
-	</p>
+	</p>-->
 	<p align="justify" style="font-size:14px">
 		Computing systems are used in various critical domains including aerospace, energy, transportation, healthcare, and commerce. 
 		Failures of these systems may lead to catastrophic consequences such as injury, loss of life, damage to equipment, or financial loss. 
@@ -56,8 +56,8 @@
 		<br>
 	</p>
 	<p><strong>Time: </strong>Mon/Wed 2:00 - 3:15pm<br> 
-	<strong>Location: </strong>Rice 340<br><br>
-	<strong>Instructor Office Hours: </strong>TBD or by appointment - via Zoom<br>
+	<strong>Location: </strong>Rice Hall 340<br><br>
+	<strong>Instructor Office Hours: </strong>TBD or by appointment<br>
 	<strong>TA Office Hours: </strong>TBD<br>	
 	<strong><a href="https://collab.its.virginia.edu/portal/site/1b7818db-9f3c-4d78-ba05-d2847f0a107f" target="_blank">UVA Collab Site</a></strong> (For lecture notes, homework submission, grading)<br>
 	<strong><a href="https://piazza.com/virginia/spring2021/ececs44346434" target="_blank">Piazza</a></strong> (For questions, discussions, and polls)</p>	
