--- a/teaching/ece_6434/presentations.html
+++ b/teaching/ece_6434/presentations.html
@@ -20,13 +20,13 @@
 	<tr>
 	<td>
 	<p align="left" style="font-size:22px">
-	   <b>ECE/CS 4434/6434 - Spring 2021 Student Presentations<br></b>
+	   <b>ECE/CS 4434/6434 - Student Presentations<br></b>
 	</p>
 	</td>
 	</tr>
 	<tr>
 	<td>
-    <a id="2020_projects" style="font-size:16px"><b>Short Presentations</b></a>:
+    <a id="2020_projects" style="font-size:16px"><b>Short Presentations - Spring 2021 </b></a>:
 	<table border="0" cellpadding="0" cellspacing="20" align="left">
 		<tbody>
 		<tr>
