--- a/pub.html
+++ b/pub.html
@@ -25,6 +25,22 @@
 
 		    <tr valign="top">
 			<td>
+			<a href="https://arxiv.org/pdf/2106.11962.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+			   -->
+			</td>
+			<td>
+			<p align="left">
+
+			<b><font color=#000000>“Analysis of Executional and Procedural Errors in Dry-lab Robotic Surgery Experiments” </font></b></b><br>
+			K. Hutchinson, Zongyu Li, Leigh A. Cantrell, Noah S. Schenkman, <u>H. Alemzadeh</u><br>
+			To appear in the <i>The International Journal of Medical Robotics and Computer Assisted Surgery (IJMRACS)</i><br>   	
+			</p>
+			</td>
+		    </tr>
+		    
+		    <tr valign="top">
+			<td>
 			<a href="./papers/CHASE_2021.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
 			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
 			   -->
