--- a/students.html
+++ b/students.html
@@ -58,6 +58,8 @@
 			<td><ul> 
 			<li>Brandon Brnich</li>
 			<li>Rohan Chandra</li>
+			<li>Saahith Janapati</li>
+			<li>Maxfield Kouzel</i>
 			<li>Haotian Ren</li>
 			<li>Ian Reyes</li>
 			</ul>
