Update course, add papers, news

--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
         <tr>
         <td width="10"></td>
         <td colspan=3 text-align:right;>
-        	 <br>
         	 I am an assistant professor in the department of <a href="http://www.ece.virginia.edu/">Electrical and Computer Engineering</a>, with 
         	 a courtesy appointment in the department of <a href="http://www.cs.virginia.edu/">Computer Science</a> at
         	 the <a href="http://virginia.edu">University of Virginia</a>. I am also affiliated with the <a href="http://linklab.virginia.edu">LinkLab</a>, a multi-disciplinary research center for Cyber-Physical Systems (CPS).<br>
-        	 <br> Before joining UVA, I was a research staff member at the <a href="https://researcher.watson.ibm.com/researcher/view_group.php?id=7664"> IBM T. J. Watson Research Center</a>.
+        	 
+        	 <br> I am a recipient of the NSF CAREER Award in 2022 and the William C. Carter Ph.D. Dissertation Award in Dependability in 2017.
+        	 Before joining UVA, I was a research staff member at the <a href="https://researcher.watson.ibm.com/researcher/view_group.php?id=7664"> IBM T. J. Watson Research Center</a>.
              I received my Ph.D. in <a href="http://www.ece.illinois.edu/">Electrical and Computer Engineering</a> from the 
              <a href="http://www.illinois.edu/">University of Illinois</a> Urbana-Champaign, where I worked in the <a href="http://depend.csl.illinois.edu/">DEPEND</a> group
              within the <a href="http://csl.illinois.edu/">Coordinated Science Laboratory</a>. 
