--- a/news.html
+++ b/news.html
@@ -24,11 +24,38 @@
 		<tbody>									
 			<tr valign="top"><td colspan="2"></td></tr>
 			<tr valign="top">
+			<td>01/2022</td>
+			<td width="5"></td>
+			<td>
+			I received an NSF CAREER Award on <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2146295&HistoricalAwards=false" target="_blank">"Context-Aware Runtime Safety Assurance in Medical Human-Cyber-Physical Systems"</a>.
+			</td>	
+			</tr>
+			
+			<tr valign="top"><td colspan="2"></td></tr>
+			<tr valign="top">
+			<td>12/2021</td>
+			<td width="5"></td>
+			<td>
+			Our <a href="./papers/CHASE_2021.pdf" target="_blank">paper</a> was selected as the finalist for the Best Paper Award at the <a href="https://conferences.computer.org/chase2021/" target="_blank">2021 IEEE CHASE conference</a>.
+			</td>	
+			</tr>
+			
+			<tr valign="top"><td colspan="2"></td></tr>
+			<tr valign="top">
+			<td>09/2021</td>
+			<td width="5"></td>
+			<td>
+			My PhD students, Kay Hutchinson and Zoey Li, won the second place in the ECE Graduate Student Research Poster competition!
+			</td>	
+			</tr>
+			
+			<tr valign="top"><td colspan="2"></td></tr>
+			<tr valign="top">
 			<td>04/2021</td>
 			<td width="5"></td>
 			<td>
-			We were awarded a grant from <a href="https://www.nist.gov/ctl/pscr/funding-opportunities/past-funding-opportunities/psiap-augmented-reality">NIST PSIAP-AR</a> on "Context Aware Augmented Reality for Cognitive Assistance in Emergency Medical Services".
-			<br>Co-PIs: Jack Stankovic (CS), Ronald Williams (ECE).
+			We were awarded a grant from <a href="https://www.nist.gov/ctl/pscr/funding-opportunities/past-funding-opportunities/psiap-augmented-reality" target="_blank">NIST PSIAP-AR</a> on <a href="https://www.nist.gov/ctl/pscr/funding-opportunities/past-funding-opportunities/psiap-augmented-reality/context-aware" target="_blank">"Context Aware Augmented Reality for Cognitive Assistance in Emergency Medical Services"</a>.
+			Co-PIs: Jack Stankovic (CS), Ronald Williams (ECE).
 			</td>	
 			</tr>
 			
@@ -37,7 +64,7 @@
 			<td>03/2021</td>
 			<td width="5"></td>
 			<td>
-			Our paper on <a href="https://arxiv.org/abs/2104.02545">Data-driven Design of Context-aware Monitors for Hazard Prediction in Artificial Pancreas Systems</a> was accepted to the<a href="http://dsn2021.ntu.edu.tw" target="_blank"> 51st IEEE/IFIP Int. Conf. on Dependable Systems and Networks (DSN 2021)</a> (Acceptance rate: 16.3%). 
+			Our paper on <a href="https://arxiv.org/abs/2104.02545" target="_blank">Data-driven Design of Context-aware Monitors for Hazard Prediction in Artificial Pancreas Systems</a> was accepted to the<a href="http://dsn2021.ntu.edu.tw" target="_blank"> 51st IEEE/IFIP Int. Conf. on Dependable Systems and Networks (DSN 2021)</a> (Acceptance rate: 16.3%). 
 			<br><br>
 			Our CognitiveEMS project on AI Cognitive Assistants for Emergency Medical Services was featured by: <a href = "https://news.virginia.edu/content/research-and-rescue-engineers-and-first-responders-join-forces" target="_blank">UVA Today</a>, <a href = "https://www.nbc29.com/2021/03/18/uva-engineers-developing-ai-technology-help-first-responders/" target="_blank">NBC29</a>, <a href = "https://www.wsls.com/news/local/2021/03/21/uva-engineers-developing-ai-technology-to-help-first-responders-during-emergencies/" target="_blank">WSLS</a>, and  <a href = "https://www.ems1.com/technology/articles/va-first-responders-test-ai-assistant-for-emergency-scenes-EiXK2kxFCYxMEfjc/" target="_blank">EMS1</a>.
 			</td>	
@@ -48,8 +75,8 @@
 			<td>01/2021</td>
 			<td width="5"></td>
 			<td>
-			I am co-organizing the <a href="https://www.dependability.org/wg10.4/ivds2021/">First IFIP workshop on Intelligent Vehicle Dependability and Security (IVDS)</a> in conjunction with the Winter Meeting of the IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance. All the talks are available <a href="https://www.dependability.org/wg10.4/ivds2021/program.html">here</a>.
-			[<a href="https://www.ifipnews.org/ifip-wg10-4-stages-first-workshop-intelligent-vehicle-dependability-security/">IFIP News</a>]
+			I am co-organizing the <a href="https://www.dependability.org/wg10.4/ivds2021/" target="_blank">First IFIP workshop on Intelligent Vehicle Dependability and Security (IVDS)</a> in conjunction with the Winter Meeting of the IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance. All the talks are available <a href="https://www.dependability.org/wg10.4/ivds2021/program.html" target="_blank">here</a>.
+			[<a href="https://www.ifipnews.org/ifip-wg10-4-stages-first-workshop-intelligent-vehicle-dependability-security/" target="_blank">IFIP News</a>]
 			</td>	
 			</tr>
 			
