--- a/teaching.html
+++ b/teaching.html
@@ -30,7 +30,7 @@
 			<td>
 			<p align="left" style="font-size:13px">
 			<u><a href="./teaching/ece_6434">Dependable Computing Systems (ECE/CS 4434/6434)</a></u><br>
-			Instructor, ECE/CS Departments, Spring 2017, 2018, 2019, 2021<br><br>
+			Instructor, ECE/CS Departments, Spring 2017, 2018, 2019, 2021, 2022<br><br>
             <u><a href="./teaching/ece_6501">Advanced Embedded Computing Systems (ECE 4501/6501, CS 6501)</a></u><br>
 			Instructor, ECE Department, Fall 2017, 2018, 2020, 2021<br><br>
 			</p>
