Add paper, grant

--- a/news.html
+++ b/news.html
@@ -48,6 +48,16 @@
 			My PhD students, Kay Hutchinson and Zoey Li, won the second place in the ECE Graduate Student Research Poster competition!
 			</td>	
 			</tr>
+	
+			<tr valign="top"><td colspan="2"></td></tr>
+			<tr valign="top">
+			<td>07/2021</td>
+			<td width="5"></td>
+			<td>
+			We were awarded a grant from <a href="https://cyberinitiative.org" target="_blank">Commonwealth Cyber Initiative (CCI)</a> on "Trustworthiness in Autonomous Vehicles"</a>.
+			Co-PI: Evgenia Smirni.
+			</td>	
+			</tr>
 			
 			<tr valign="top"><td colspan="2"></td></tr>
 			<tr valign="top">
