--- a/students.html
+++ b/students.html
@@ -57,8 +57,11 @@
 		    <td></td>
 			<td><ul> 
 			<li>Rohan Chandra</li>
+			<li>Aishwarya Gavili</i>
+			<li>Sneha Iyer</i>
 			<li>Saahith Janapati</li>
 			<li>Maxfield Kouzel</i>
+			<li>Sharon Lu</i>
 			<li>Haotian Ren</li>
 			<li>Ian Reyes</li>
 			</ul>
