--- a/pub.html
+++ b/pub.html
@@ -40,7 +40,7 @@
 		    
 		    <tr valign="top">
 			<td>
-			<a href="https://arxiv.org/pdf/2106.11962.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<a href="https://onlinelibrary.wiley.com/doi/10.1002/rcs.2375"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
 			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
 			   -->
 			</td>
