--- a/pub.html
+++ b/pub.html
@@ -25,6 +25,21 @@
 
 		    <tr valign="top">
 			<td>
+			<!--<a href="./papers/ICRA_2022.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+			   -->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“Strategic Safety-Critical Attacks against an Advanced Driver Assistance System” </font></b></b><br>
+			X. Zhou, A. Schmedding, H. Ren, L. Yang, P. Schowitz, E. Smirni, <u>H. Alemzadeh</u><br>
+			To appear in the <i>52nd Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)</i>, 2022. <b> (Acceptance rate ~ 18.7%)</b> <br>   	
+			</p>
+			</td>
+		    </tr>
+		    
+		    <tr valign="top">
+			<td>
 			<a href="./papers/ICRA_2022.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
 			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
 			   -->
@@ -32,8 +47,8 @@
 			<td>
 			<p align="left">
 			<b><font color=#000000>“Runtime Detection of Executional Errors in Robot-Assisted Surgery” </font></b></b><br>
-			Zongyu Li, K. Hutchinson, <u>H. Alemzadeh</u><br>
-			To appear in the <i>IEEE International Conference on Robotics and Automation (ICRA)</i>, 2022.<br>   	
+			Z. Li, K. Hutchinson, <u>H. Alemzadeh</u><br>
+			To appear in the <i>IEEE International Conference on Robotics and Automation (ICRA)</i>, 2022. <b>(Acceptance rate ~ 43.1%)</b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -63,7 +78,7 @@
 			<p align="left">
 			<b><font color=#000000>“Information Extraction from Patient Care Reports for Intelligent Emergency Medical Services” </font></b></b><br>
 			S. Kim, W. Guo, R. Williams, J. Stankovic, <u>H. Alemzadeh</u><br>
-			In the <i>IEEE/ACM Conf. on Connected Health: Applications, Systems, and Engineering Technologies (CHASE)</i>, 2021.<br>   	
+			In the <i>IEEE/ACM Conf. on Connected Health: Applications, Systems, and Engineering Technologies (CHASE)</i>, 2021.<b> (Best Paper Finalist)</b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -78,7 +93,7 @@
 			<p align="left">
 			<b><font color=#000000>“Data-driven Design of Context-aware Monitors for Hazard Prediction in Artificial Pancreas Systems” </font></b></b><br>
 			X. Zhou, B. Ahmed, J. H. Aylor, P. Asare, <u>H. Alemzadeh</u><br>
-			In the <i>51st IEEE/IFIP Int. Conf. on Dependable Systems and Networks (DSN)</i>, 2021.<br>   	
+			In the <i>51st IEEE/IFIP Int. Conf. on Dependable Systems and Networks (DSN)</i>, 2021. <b> (Acceptance rate ~ 16.3%)</b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -123,7 +138,7 @@
 			<p align="left">
 			<b><font color=#000000>“Real-Time Context-aware Detection of Unsafe Events in Robot-Assisted Surgery” </font></b></b><br>
 			M. S. Yasar, <u>H. Alemzadeh</u><br>
-			In the <i>50th IEEE/IFIP Int. Conf. on Dependable Systems and Networks (DSN)</i>, 2020.<br>   	
+			In the <i>50th IEEE/IFIP Int. Conf. on Dependable Systems and Networks (DSN)</i>, 2020. <b> (Acceptance rate ~ 16.5%)</b><br>   	
 			</p>
 			</td>
 		    </tr>
@@ -156,7 +171,7 @@
 			<p align="left">
 			<b><font color=#000000>“EMSContExt: EMS Protocol-driven Concept Extraction for Cognitive Assistance in Emergency Response” </font></b></b><br>
 			S. M. Preum, S. Shu, <u>H. Alemzadeh</u>, J. Stankovic<br>
-			In the <i>Thirty-Second Annual Conf. on Innovative Applications of Artificial Intelligence (IAAI-20)</i>, 2020.<br>	   	
+			In the <i>Thirty-Second Annual Conf. on Innovative Applications of Artificial Intelligence (IAAI-20)</i>, 2020. <b> (Acceptance rate ~ 35%)</b><br>	   	
 			</p>
 			</td>
 		    </tr>
@@ -171,7 +186,7 @@
 			<p align="left">
 			<b><font color=#000000>“GRACE: Generating Summary Reports Automatically for Cognitive Assistance in Emergency Response” </font></b></b><br>
 			M A. Rahman, S. M. Preum, R. Williams, <u>H. Alemzadeh</u>, J. Stankovic<br>
-			In the <i>Thirty-Second Annual Conf. on Innovative Applications of Artificial Intelligence (IAAI-20)</i>, 2020.<br>	   	
+			In the <i>Thirty-Second Annual Conf. on Innovative Applications of Artificial Intelligence (IAAI-20)</i>, 2020.  <b> (Acceptance rate ~ 35%)</b><br>	   	
 			</p>
 			</td>
 		    </tr>
