--- a/pub.html
+++ b/pub.html
@@ -33,7 +33,7 @@
 			<p align="left">
 			<b><font color=#000000>“Robustness Testing of Data and Knowledge Driven Anomaly Detection in Cyber-Physical Systems” </font></b></b><br>
 			Xugui Zhou, Maxfield Kouzel, <u>H. Alemzadeh</u><br>
-			To appear in the <i>5th IEEE/IFIP DSN Workshop on Dependable and Secure Machine Learning (DSN-DSML)</i>, 2022. <b> <br>   	
+			In the <i>5th IEEE/IFIP DSN Workshop on Dependable and Secure Machine Learning (DSN-DSML)</i>, 2022. <b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -48,7 +48,7 @@
 			<p align="left">
 			<b><font color=#000000>“Strategic Safety-Critical Attacks against an Advanced Driver Assistance System” </font></b></b><br>
 			X. Zhou, A. Schmedding, H. Ren, L. Yang, P. Schowitz, E. Smirni, <u>H. Alemzadeh</u><br>
-			To appear in the <i>52nd Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)</i>, 2022. <b> (Acceptance rate ~ 18.7%)</b> <br>   	
+			In the <i>52nd Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)</i>, 2022. <b> (Acceptance rate ~ 18.7%)</b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -63,7 +63,7 @@
 			<p align="left">
 			<b><font color=#000000>“Runtime Detection of Executional Errors in Robot-Assisted Surgery” </font></b></b><br>
 			Z. Li, K. Hutchinson, <u>H. Alemzadeh</u><br>
-			To appear in the <i>IEEE International Conference on Robotics and Automation (ICRA)</i>, 2022. <b>(Acceptance rate ~ 43.1%)</b> <br>   	
+			In the <i>IEEE International Conference on Robotics and Automation (ICRA)</i>, 2022. <b>(Acceptance rate ~ 43.1%)</b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -78,7 +78,7 @@
 			<p align="left">
 			<b><font color=#000000>“Analysis of Executional and Procedural Errors in Dry-lab Robotic Surgery Experiments” </font></b></b><br>
 			K. Hutchinson, Zongyu Li, Leigh A. Cantrell, Noah S. Schenkman, <u>H. Alemzadeh</u><br>
-			To appear in the <i>International Journal of Medical Robotics and Computer Assisted Surgery (IJMRACS)</i>, 2022.<br>   	
+			In the <i>International Journal of Medical Robotics and Computer Assisted Surgery (IJMRACS)</i>, 2022.<br>   	
 			</p>
 			</td>
 		    </tr>
